crates/tests/fixtures/harness/data/error/missing_self_typed_first_param/input.rdl

#[win32]
mod Test {
    interface IFoo {
        fn Method(a: i32);
    }
}
        